增加案例